# VRChat-Photo-Manager-Backend

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/api/: mod.rs  status_api.rs  storage_api.rs  user_api.rs
src/models/: user_model.rs
src/repository/: mongodb_repo.rs
