[package]
name = "vrcphotomanager-accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
mongodb = "2.8.2"
reqwest = "0.12.4"
serde_json = "1.0"
randomizer = "0.1.2"
